[project]
name = "call-me-maybe"
version = "1.0.0"
description = "Function calling tool that translates natural language prompts into structured function calls using constrained decoding."
authors = [{name = "fjose-hi"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
    "pydantic>=2.0",
    "llm-sdk",
    "accelerate>=1.14.0",
]

[tool.uv.sources]
llm-sdk = { path = "llm_sdk", editable = true }
torch = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[dependency-groups]
dev = [
    "flake8>=7.0",
    "mypy>=1.10",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true
disallow_untyped_defs = true
check_untyped_defs = true
exclude = "^llm_sdk/"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
